@@ -79,7 +79,7 @@ public class APILinkTiktokProductToGoSELL {
      */
     private List<String> getBcTierVariations(APIGetProductDetail.ProductInformation productInfo) {
         if (!productInfo.isHasModel()) return List.of();
-        return Arrays.stream(productInfo.getModels().getFirst().getLabel().split("\\|")).toList();
+        return Arrays.stream(productInfo.getModels().get(0).getLabel().split("\\|")).toList();
     }
 
     /**
@@ -223,7 +223,7 @@ public class APILinkTiktokProductToGoSELL {
         List<APIGetTikTokProducts.ItemMapping> changedItemMappings = APIGetTikTokProducts.getItemMapping(newLinkedTiktokProducts);
 
         // Retrieve the store ID from the first changed item mapping
-        int storeId = originalTiktokProducts.getFirst().getBcStoreId();
+        int storeId = originalTiktokProducts.get(0).getBcStoreId();
 
         // Verify the inventory event based on sync status and action times
         VerifyAutoSyncHelper.verifyInventoryEvent(isAutoSynced, changedItemMappings, actionTime, storeId, connection, "GS_TIKTOK_SYNC_ITEM_EVENT");
